--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -5,7 +5,7 @@
  */
 html {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0 auto;
 }
 
@@ -13,7 +13,7 @@ html {
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 h1,
@@ -101,7 +101,7 @@ body {
   background-color: #c7133e;
   color: #fff;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .modal {
@@ -112,7 +112,7 @@ body {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding: 40px;
   width: 450px;
 }
@@ -128,11 +128,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: none;
   border: none;
   position: absolute;
@@ -168,8 +168,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .modal-form-input {
@@ -179,13 +179,14 @@ body {
   top: 314px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 17px;
   padding-left: 42px;
   color: #c7133e;
 }
 
-.modal-form-input:focus, .modal-form-input:hover {
+.modal-form-input:focus,
+.modal-form-input:hover {
   border-color: #c7133e;
   outline: none;
 }
@@ -202,7 +203,7 @@ body {
   left: 12px;
   top: 50%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   fill: #ecebeb;
 }
 
@@ -218,7 +219,7 @@ body {
   top: 314px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 17px;
   padding-left: 16px;
   padding-top: 12px;
@@ -226,7 +227,8 @@ body {
   color: #c7133e;
 }
 
-.modal-comment:focus, .modal-comment:hover {
+.modal-comment:focus,
+.modal-comment:hover {
   border-color: #c7133e;
   outline: none;
 }
@@ -256,8 +258,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .check-lable::before {
@@ -283,11 +285,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -303,7 +305,7 @@ body {
   top: 80%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 img {
@@ -326,7 +328,7 @@ img {
   padding: 0;
   clip: rect(0 0 0 0);
   -webkit-clip-path: inset(50%);
-          clip-path: inset(50%);
+  clip-path: inset(50%);
   margin: -1px;
 }
 
@@ -468,7 +470,7 @@ img {
   top: 50px;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   font-size: 15px;
   letter-spacing: 4px;
 }
@@ -535,7 +537,7 @@ img {
   width: 100%;
   height: 252px;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-image: url(../images/ice-cream1.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -574,7 +576,7 @@ img {
   width: 100%;
   height: 252px;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-image: url(../images/coffee1.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -616,7 +618,7 @@ img {
   width: 100%;
   height: 252px;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   background-image: url(../images/milk1.png);
   background-repeat: no-repeat;
   background-position: center;
@@ -632,7 +634,8 @@ img {
   cursor: pointer;
 }
 
-.product-button:hover, .product-button:focus {
+.product-button:hover,
+.product-button:focus {
   background-color: #f7e4e8;
 }
 
@@ -644,8 +647,8 @@ img {
 .how-its-made {
   font-weight: normal;
   letter-spacing: normal;
-  background-color: #FFF5F6;
-  background-image: url(../images/how-its-made/milk-mob-1.png);
+  background-color: #fff5f6;
+  background-image: url(../images/milk-mob-1.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 0 768px;
@@ -654,9 +657,12 @@ img {
   padding-bottom: 39px;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .how-its-made {
-    background-image: url(../images/how-its-made/milk-mob-2.png);
+    background-image: url(../images/milk-mob-2.png);
   }
 }
 
@@ -674,14 +680,17 @@ img {
 
 @media screen and (min-width: 1200px) {
   .how-its-made {
-    background-image: url(../images/how-its-made/milk-desk-1.png);
+    background-image: url('./images/milk-desk-1.png');
     background-position: 0 342px;
   }
 }
 
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (min-resolution: 192dpi),
+  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .how-its-made {
-    background-image: url(../images/how-its-made/milk-desk-2.png);
+    background-image: url(../imagesmilk-desk-2.png);
   }
 }
 
@@ -708,7 +717,7 @@ img {
   font-size: 18px;
   line-height: 1.17;
   text-align: center;
-  color: #FFA5BA;
+  color: #ffa5ba;
   margin-bottom: 15px;
 }
 
@@ -736,7 +745,7 @@ img {
   line-height: 39px;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #D41443;
+  color: #d41443;
   margin: 0 auto 26px auto;
 }
 
@@ -844,7 +853,7 @@ img {
 
 .how-its-made__second-text {
   margin-bottom: 17px;
-  color: #907E82;
+  color: #907e82;
 }
 
 @media screen and (min-width: 768px) {
@@ -880,19 +889,20 @@ img {
 .how-its-made__btn {
   width: 176px;
   height: 44px;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 22px;
   border: none;
 }
 
-.how-its-made__btn:hover, .how-its-made__btn:focus {
-  background: #ECEBEB;
+.how-its-made__btn:hover,
+.how-its-made__btn:focus {
+  background: #ecebeb;
   cursor: pointer;
 }
 
 .how-its-made__icon {
   margin-left: 8px;
-  fill: #D41443;
+  fill: #d41443;
 }
 
 .how-its-made__read-more {
@@ -900,11 +910,17 @@ img {
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
-  color: #D41443;
+  color: #d41443;
 }
 
 .gallery {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(40%, #fff5f6), to(#e5e5e5));
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(40%, #fff5f6),
+    to(#e5e5e5)
+  );
   background-image: linear-gradient(to bottom, #fff5f6 40%, #e5e5e5);
   width: 100vw;
   margin-left: auto;
@@ -959,8 +975,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background-color: #fff5f6;
   padding-bottom: 97px;
 }
@@ -991,7 +1007,7 @@ img {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     margin-top: -60px;
     margin-left: -60px;
   }
@@ -1007,7 +1023,7 @@ img {
     margin-top: 60px;
     margin-left: 60px;
     -ms-flex-preferred-size: calc(100% / 3 - 60px);
-        flex-basis: calc(100% / 3 - 60px);
+    flex-basis: calc(100% / 3 - 60px);
   }
 }
 
@@ -1032,7 +1048,10 @@ img {
   background-repeat: no-repeat;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .milk-item::before {
     background-image: url(../images/icon-milk-2x.png);
     height: 100px;
@@ -1048,7 +1067,10 @@ img {
   background-repeat: no-repeat;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .apple-item::before {
     background-image: url(../images/icon-apple-2x.png);
     height: 100px;
@@ -1064,7 +1086,10 @@ img {
   background-repeat: no-repeat;
 }
 
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
   .heart-item::before {
     background-image: url(../images/icon-heart-2x.png);
     height: 100px;
@@ -1368,9 +1393,10 @@ body {
 
 .contact {
   -webkit-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-          box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+  flex-basis: 100%;
   padding: 43px 20px;
   background-color: #fff;
   border-radius: 10px;
@@ -1391,8 +1417,8 @@ body {
 
 @media screen and (min-width: 768px) {
   .contact {
-    -ms-flex-preferred-size: calc(100%/3);
-        flex-basis: calc(100%/3);
+    -ms-flex-preferred-size: calc(100% / 3);
+    flex-basis: calc(100% / 3);
     padding: 50px 31px;
     margin-right: 30px;
     margin-top: -78px;
@@ -1466,7 +1492,7 @@ body {
 }
 
 .contacts__text {
-  color: #907E82;
+  color: #907e82;
   margin-bottom: 50px;
 }
 
@@ -1488,7 +1514,7 @@ body {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
   bottom: 190px;
   left: 0px;
 }
@@ -1501,7 +1527,7 @@ body {
 
 .agenda {
   margin-top: 25px;
-  border-bottom: #E1E1E1;
+  border-bottom: #e1e1e1;
   margin-bottom: 40px;
 }
 
@@ -1511,7 +1537,7 @@ body {
   display: block;
   width: 100%;
   height: 1px;
-  background-color: #E1E1E1;
+  background-color: #e1e1e1;
   left: 0px;
   bottom: 60px;
 }
@@ -1529,11 +1555,11 @@ body {
 
 .agenda__hours {
   margin-bottom: 15px;
-  color: #FFA5BA;
+  color: #ffa5ba;
 }
 
 .contact__itam {
-  color: #907E82;
+  color: #907e82;
 }
 
 .button-section {
@@ -1542,22 +1568,22 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
   .button-section {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -1595,7 +1621,7 @@ body {
   height: 44px;
   border: 0;
   border-radius: 100px;
-  color: #D41443;
+  color: #d41443;
   background-color: #fff;
 }
 
@@ -1605,8 +1631,9 @@ body {
   }
 }
 
-.button-section__itam--white:hover, .button-section__itam--white:focus {
-  background-color: #ECEBEB;
+.button-section__itam--white:hover,
+.button-section__itam--white:focus {
+  background-color: #ecebeb;
 }
 
 @media screen and (max-width: 767px) {
@@ -1651,8 +1678,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
 }
 
@@ -1713,8 +1740,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  -ms-flex-pack: right;
+  justify-content: right;
   margin-bottom: 46px;
 }
 
@@ -1725,11 +1752,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   border-radius: 50%;
   background: #fea5bb;
   fill: #ffffff;
@@ -1782,8 +1809,8 @@ body {
   padding-right: 85px; */
   text-align: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
