--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -18,6 +18,7 @@
     }
     @media screen and (min-width: 768px) and (max-width: 1199px){
         padding-top: 130px;
+        padding-bottom: 66px;
     }
     @media screen and (min-width: 768px){
         background-image: none;
