--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -31,7 +31,7 @@
                   class="modal-form-input"
                 />
                 <svg class="modal-icon" width="15" height="15">
-                  <use href="./images/sprite-modal.svgicon-phone"></use>
+                  <use href="./images/sprite-modal.svg#icon-phone"></use>
                 </svg>
               </span>
             </div>
