--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,5 +1,5 @@
 <div class="contacts">
-  <div class="container__contacts">
+  <div class="container__contacts container">
     <h2 class="visually-hidden">Contacts</h2>
     <ul class="contacts__list">
       <li class="contact">
@@ -65,13 +65,13 @@
       <button type="button" class="button-section__itam--red">
         Our Locations
         <svg width="12" height="10">
-          <!-- <use href='./images/sprite-con.svg#icon-white'></use> -->
+          <use href='./images/sprite-con.svg#icon-white'></use>
         </svg>
       </button>
       <button type="button" class="button-section__itam--white">
         Franchise
         <svg width="12" height="10">
-          <!-- <use href='./images/sprite-con.svg#icon-red'></use> -->
+          <use href='./images/sprite-con.svg#icon-red'></use>
         </svg>
       </button>
     </div>
