--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,21 +1,3 @@
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  @media screen and (min-width: 320px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
-  }
-}
-
 .footer {
   background: #fff5f6;
 }
@@ -102,6 +84,10 @@
 
   background: #fea5bb;
   fill: #ffffff;
+  &:hover,
+  &:focus {
+    background: #d41443;
+  }
 }
 
 .footer-item-icon {
