--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,28 +1,4 @@
-h1,
-h2,
-h3,
-ul,
-li,
-p {
-      margin: 0;
-      padding: 0;
-      text-decoration: none;
-    }
 
-img {
- 
-    display: block;
-    width: 100%;
-    height: auto;
- }
-li {list-style-type: none;
-  text-decoration: none;
-  }
-
-
-a{
-  text-decoration: none;
-}
 body{
     font-family: DM Sans;
     font-weight: 500;
@@ -32,49 +8,46 @@ body{
     @media screen and (min-width:768px) {
         font-size: 14px;
         line-height: 1.83;
+      
     }
     @media screen and (min-width:1200px) {
         font-size: 16px;
+        
     }
 }
 
 .container__contacts{
     
-    width: 100vw;
     padding-bottom: 113px;
-    margin-left: auto;
-    margin-right: auto;
-    padding:0 50px;
+    
     @media screen and (min-width: 480px) {
-      width: 480px;  
+      
       
     }
     @media screen and (min-width: 768px) {
-        width: 768px;
-        padding: 0 36px;
+       
         padding-bottom: 158px;
         
     }
     @media screen and(min-width: 1200px) {
-        width: 1200px;
-        padding:0 150px;
+       
         padding-bottom: 165px;
     }
     @media screen and (max-width:767px) {
-        max-width: 350px;
+        max-width: 280px;
     }
 }
 .contacts{
-    
-    background-color: rgba(255, 245, 246, 1);
+    background-image: linear-gradient(rgba(255, 245, 246, 1), rgba(255, 245, 246, 1));
+    background-position: right 0px top 84px;
    
     
     background-repeat: no-repeat;
     
     background-size: contain;
     @media screen and (min-width: 1200px) {
-        background-image:
-        url(../images/dots.png);
+        background-image: url(../images/dots.png), linear-gradient(rgba(255, 245, 246, 1), rgba(255, 245, 246, 1));
+        background-position: right 0px top 102px;
     }
     
     
@@ -100,9 +73,7 @@ body{
 }
 .contact{
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-    &:first-child{
-        margin-top: -84px;
-    }
+   
     flex-basis: 100%;
    
     padding: 43px 20px;
@@ -116,12 +87,9 @@ body{
     }
     @media screen and (min-width: 768px) {
         flex-basis: calc(100%/3);
-        padding: 50px 31px;
+        padding: 50px 28px;
         margin-right: 30px;
-        margin-top: -78px;
-            &:first-child{
-                margin-top: -78px;
-            }
+       
              &:last-child{
                 margin-right: 0px;
                 
@@ -129,11 +97,9 @@ body{
 
     }
     @media screen and (min-width: 1200px) {
-        &:first-child{
-            margin-top: -102px;
-        }
-        padding: 51px 44px 62px 44px;
-        margin-top: -102px;
+        
+        padding: 51px 40px 62px 40px;
+       
         
     }
 
@@ -194,10 +160,13 @@ body{
         width: 100%;
         height: 1px;
         background-color: #E1E1E1;
-        bottom: 190px;
+        bottom: 210px;
         left: 0px;
         @media screen and (min-width:768px) {
             bottom: 265px;
+        }
+        @media screen and (min-width:1200px) {
+            bottom: 300px;
         }
     }
 }
