--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -2,7 +2,7 @@
   max-width: 480px;
   padding-left: 20px;
   padding-right: 20px;
-  padding-bottom: 170px;
+  padding-bottom: 86px;
   margin-left: auto;
   margin-right: auto;
 
@@ -10,14 +10,14 @@
     max-width: 768px;
     padding-left: 74px;
     padding-right: 74px;
-    padding-bottom: 197px;
+    padding-bottom: 119;
   }
 
   @media screen and (min-width: 1280px) {
     max-width: 1280px;
     padding-left: 176px;
     padding-right: 176px;
-    padding-bottom: 234px;
+    padding-bottom: 132px;
   }
 }
 
