--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -102,6 +102,124 @@
     transform: translate(-50%, -50%);
     font-size: 15px;
     letter-spacing: 4px;
+    @media screen and (min-width: 1200px) {
+      top: 60px;
+    }
+  }
+}
+
+.ice-picture::before {
+  position: absolute;
+  content: '';
+  top: -150px;
+  left: 50%;
+  width: 100%;
+  height: 252px;
+  transform: translate(-50%, -50%);
+  background-image: url(../images/ice-cream1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(../images/ice-cream2-min.png);
+  }
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    height: 233px;
+    background-image: url(../images/ice-cream2x1-min.png);
+  }
+  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/ice-cream2x2-min.png);
+  }
+  @media screen and (min-width: 1200px) {
+    top: -220px;
+    width: 335px;
+    height: 335px;
+    background-image: url(../images/ice-cream3x1-min.png);
+  }
+  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/ice-cream3x2-min.png);
+  }
+}
+.coffee-picture::before {
+  position: absolute;
+  content: '';
+  top: -150px;
+  left: 50%;
+  width: 100%;
+  height: 252px;
+  transform: translate(-50%, -50%);
+  background-image: url(../images/coffee1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(../images/coffee2-min.png);
+  }
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    height: 233px;
+    background-image: url(../images/coffee2x1-min.png);
+  }
+  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/coffee2x2-min.png);
+  }
+  @media screen and (min-width: 1200px) {
+    top: -220px;
+    width: 335px;
+    height: 335px;
+    background-image: url(../images/coffee3x1-min.png);
+  }
+  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/coffee3x2-min.png);
+  }
+}
+.milkshake-picture::before {
+  position: absolute;
+  content: '';
+  top: -150px;
+  left: 50%;
+  width: 100%;
+  height: 252px;
+  transform: translate(-50%, -50%);
+  background-image: url(../images/milk1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url(../images/milk2-min.png);
+  }
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    height: 233px;
+    background-image: url(../images/milk2x1-min.png);
+  }
+  @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/milk2x2-min.png);
+  }
+  @media screen and (min-width: 1200px) {
+    top: -220px;
+    width: 335px;
+    height: 335px;
+    background-image: url(../images/milk3x1-min.png);
+  }
+  @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/milk3x2-min.png);
   }
 }
 
@@ -146,48 +264,10 @@
     width: 329px;
     height: 525px;
   }
-  &::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 252px;
-    transform: translate(-50%, -50%);
-    background-image: url(../images/ice-cream1.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(../images/ice-cream2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 768px) {
-      width: 220px;
-      height: 233px;
-      background-image: url(../images/ice-cream2x1-min.png);
-    }
-    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/ice-cream2x2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 335px;
-      height: 335px;
-      background-image: url(../images/ice-cream3x1-min.png);
-    }
-    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/ice-cream3x2-min.png);
-      background-size: contain;
-    }
-  }
 }
 
 .product-coffee {
   display: inline-block;
-  margin: 0;
-  padding: 0;
   margin-bottom: 144px;
   text-align: center;
   width: 280px;
@@ -202,42 +282,6 @@
   @media screen and (min-width: 1200px) {
     width: 329px;
     height: 525px;
-  }
-  &::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 252px;
-    transform: translate(-50%, -50%);
-    background-image: url(../images/coffee1.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(../images/coffee2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 768px) {
-      width: 220px;
-      height: 233px;
-      background-image: url(../images/coffee2x1-min.png);
-    }
-    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/coffee2x2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 335px;
-      height: 335px;
-      background-image: url(../images/coffee3x1-min.png);
-    }
-    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/coffee3x2-min.png);
-      background-size: contain;
-    }
   }
 }
 
@@ -256,56 +300,10 @@
     width: 329px;
     height: 525px;
   }
-  &::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 252px;
-    transform: translate(-50%, -50%);
-    background-image: url(../images/milk1.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-      background-image: url(../images/milk2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 768px) {
-      width: 220px;
-      height: 233px;
-      background-image: url(../images/milk2x1-min.png);
-    }
-    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/milk2x2-min.png);
-      background-size: contain;
-    }
-    @media screen and (min-width: 1200px) {
-      width: 335px;
-      height: 335px;
-      background-image: url(../images/milk3x1-min.png);
-    }
-    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url(../images/milk3x2-min.png);
-      background-size: contain;
-    }
-  }
 }
 
 .product-button {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: none;
-  outline: none;
-  background-color: #ffffff;
   cursor: pointer;
-  &:hover,
-  &:focus {
-    background-color: #f7e4e8;
-  }
 }
 .icon-arrow {
   text-align: center;
