--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -64,5 +64,5 @@
             <div class="modal-footer">
             <button class="btn-modal" type="button">Buy now </button>
           </form>
-          <img src="" alt="" /></div>
+          <img class="modal-img" src="./images/milk-mob-1.png" alt="" /></div>
         </div>
