--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,25 +6,25 @@
         <h1 class="footer-title">with passion</h1>
       </div>
       <div class="footer-box">
-        <ul class="footer-list list">
+        <ul class="footer-list">
           <li class="footer-item-icon">
-            <a href="https://github.com/" target="_blank" class="footer-link link">
-              <svg class="footer-icon" widht="18.82" height="18.82">
-                <!-- <use href="./images/sprite-con.svg#icon-vector"></use> -->
+            <a href="https://github.com/" target="_blank" class="footer-link">
+              <svg class="footer-icon"  height="18.82">
+                <use href="./images/sprite-con.svg#icon-vector"></use>
               </svg>
             </a>
           </li>
           <li class="footer-item-icon">
-            <a href="https://web.telegram.org/z/" target="_blank" class="footer-link link">
-              <svg class="footer-icon" widht="19.2" height="14.93">
-                <!-- <use href="./images/sprite-con.svg#icon-telegram"></use> -->
+            <a href="https://web.telegram.org/z/" target="_blank" class="footer-link">
+              <svg class="footer-icon" height="14.93">
+                <use href="./images/sprite-con.svg#icon-telegram"></use>
               </svg>
             </a>
           </li>
           <li class="footer-item-icon">
-            <a href="https://www.facebook.com/" target="_blank" class="footer-link link">
-              <svg class="footer-icon" widht="8.8" height="19.2">
-                <!-- <use href="./images/sprite-con.svg#icon-faceb"></use> -->
+            <a href="https://www.facebook.com/" target="_blank" class="footer-link">
+              <svg class="footer-icon" height="19.2">
+                <use href="./images/sprite-con.svg#icon-faceb"></use>
               </svg>
             </a>
           </li>
@@ -32,13 +32,13 @@
 
         <span class="footer-text-tel"
           >Feel free to contact
-          <a class="footer-tel link" href=" tel:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
+          <a class="footer-tel" href=" tel:+610383766284">+61 (0) 383 766 284</a>
         </span>
       </div>
     </div>
     <div class="footer-container">
       <div class="footer-rights-box">
-        <span class="footer-rights">© 2019 - IceCream. All Rights Reserved.</span>
+        <span class="footer-rights">© 2021 - IceCream. All Rights Reserved.</span>
       </div>
     </div>
   </div>
