--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,20 +1,24 @@
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+// .container {
+//   margin-left: auto;
+//   margin-right: auto;
+//   width: 100%;
+//   padding-left: 20px;
+//   padding-right: 20px;
 
-  @media screen and (min-width: 320px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
-  }
-}
+//   @media screen and (min-width: 320px) {
+//     max-width: 480px;
+//   }
+//   @media screen and (min-width: 768px) {
+//     max-width: 768px;
+//     padding-left: 35px;
+//     padding-right: 35px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     max-width: 1200px;
+//     padding-left: 115px;
+//     padding-right: 115px;
+//   }
+// }
 
 .footer {
   background: #fff5f6;
@@ -102,6 +106,10 @@
 
   background: #fea5bb;
   fill: #ffffff;
+
+  &:hover {
+    background-color: rgba(199, 19, 62, 1);
+  }
 }
 
 .footer-item-icon {
