--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,3 +1,4 @@
+
 <section class="how-its-made">
   <div class="how-its-made-main">
     <div class="container">
@@ -6,14 +7,14 @@
       <div class="how-its-made-picture-and-text">
         <picture class="how-its-made__picture">
           <source
-            srcset="./images/cows-desk-1.png 1x, ./images/cows-desk-2.png 2x"
+            srcset="../images/cows-desk-1.png 1x, ../images/cows-desk-2.png 2x"
             media="(min-width:1200px)"
           />
           <source
-            srcset="./images/cows-tab-1.png 1x, ./images/cows-tab-2.png 2x"
+            srcset="../images/cows-tab-1.png 1x, ../images/cows-tab-2.png 2x"
             media="(min-width:768px)"
           />
-          <source srcset="./images/cows-mob-1.png 1x, ./images/cows-mob-2.png 2x" />
+          <source srcset="../images/cows-mob-1.png 1x, ../images/cows-mob-2.png 2x" />
           <img class="how-its-made__image" src="#" />
         </picture>
         <div class="how-its-made-right">
@@ -32,7 +33,7 @@
           <button type="button" class="how-its-made__btn">
             <span class="how-its-made__read-more">Read more</span>
             <svg width="7" height="10">
-              <use href="./images/sprite-con.svg#icon-red"></use>
+              <use href="../images/sprite-con.svg#icon-red"></use>
             </svg>
           </button>
         </div>
