--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -17,6 +17,7 @@
   }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding-top: 130px;
+    padding-bottom: 66px;
   }
   @media screen and (min-width: 768px) {
     background-image: none;
@@ -168,7 +169,7 @@
     margin-bottom: 7px;
   }
   @media screen and (min-width: 1200px) {
-    margin-bottom: 0px;
+    margin-bottom: 19px;
   }
 }
 
@@ -178,8 +179,7 @@
   background: #ffffff;
   border-radius: 22px;
   border: none;
-  &:hover,
-  &:focus {
+  &:hover {
     background: #ecebeb;
     cursor: pointer;
   }
