--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -221,10 +221,12 @@ body{
     color: #fff;
     border: 0;
     border-radius: 100px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media screen and (min-width:1200px) {
         width: 198px;
     }
-    &:hover{
+    &:hover,
+    &:focus{
         background-color: rgba(199, 19, 62, 1);
     }
     @media screen and (max-width:767px) {
@@ -242,7 +244,7 @@ body{
     border-radius: 100px;
     color: #D41443;
     background-color: #fff;
-    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     @media screen and (min-width:1200px) {
         width: 198px;
     }
