--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -13,7 +13,7 @@
   position: relative;
   align-items: center;
 
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     justify-content: space-between;
   }
 }
@@ -31,6 +31,7 @@
   cursor: pointer;
 }
 .header-logo_title {
+  position: relative;
   font-family: Titan One;
   display: flex;
   align-items: center;
@@ -47,19 +48,16 @@
     width: 50px;
     height: 50px;
     margin-right: 20px;
-
     background-image: url(../../src/images/logo.png);
-    left: 0px;
-    top: 0px;
-    @media screen and (min-width: 1280px) {
-      left: -70px;
+
+    @media screen and (min-width: 1200px) {
     }
   }
 }
 
 .header-nav {
   display: none;
-  @media screen and (min-width: 1280px) {
+  @media screen and (min-width: 1200px) {
     display: block;
   }
 }
@@ -74,7 +72,7 @@
   line-height: 1.31;
   display: flex;
   align-items: center;
-  color: #ffffff;
+  color: var(--first-text-color);
   display: flex;
 }
 
