--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -6,13 +6,17 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 480px) {
     max-width: 480px;
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
+    padding-left: 35px;
+    padding-right: 35px;
   }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+    padding-left: 115px;
+    padding-right: 115px;
   }
 }
